# ddls

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
easylocal-3/: CMakeLists.txt  README.md
instances_synthetic/: Synthetic_NumClasses_W2_D10_S1000_NC2_NF5_CN0_FN0_0_Test.csv  Synthetic_NumClasses_W2_D10_S1000_NC2_NF5_CN0_FN0_0_Train.csv  Synthetic_NumClasses_W2_D10_S1000_NC4_NF5_CN0_FN0_0_Test.csv  Synthetic_NumClasses_W2_D10_S1000_NC4_NF5_CN0_FN0_0_Train.csv  Synthetic_NumClasses_W2_D10_S1000_NC6_NF5_CN0_FN0_0_Test.csv  Synthetic_NumClasses_W2_D10_S1000_NC6_NF5_CN0_FN0_0_Train.csv  Synthetic_NumClasses_W2_D10_S1000_NC8_NF5_CN0_FN0_0_Test.csv  Synthetic_NumClasses_W2_D10_S1000_NC8_NF5_CN0_FN0_0_Train.csv  Synthetic_NumClasses_W2_D5_S1000_NC6_NF5_CN0_FN0_0_Test.csv  Synthetic_NumClasses_W2_D5_S1000_NC6_NF5_CN0_FN0_0_Train.csv  Synthetic_NumClasses_W2_D5_S1000_NC8_NF5_CN0_FN0_0_Test.csv  Synthetic_NumClasses_W2_D5_S1000_NC8_NF5_CN0_FN0_0_Train.csv
local-search/: BDD_data.cc  BDD_data.hh  BDD_helpers.cc  BDD_helpers.hh  CMakeLists.txt  main.cc
run/: create_synthetic_datasets.py  example_HC.py  example_ILS.py  example_SA.py  heuristic.py  local_search_final.py  local_search_synthetic.py  local_search_synthetic_restarts.py  local_search_tree.py  visualize.py
temp/: acute-inflammations-nephritis_test.csv  acute-inflammations-nephritis_train.csv  acute-inflammations-nephritis_train_full.csv  acute-inflammations-nephritis_val.csv  acute-inflammations-urinary_test.csv  acute-inflammations-urinary_train.csv  acute-inflammations-urinary_train_full.csv  diagram  (+5 more)
(+21 files in other folders)
